# whatsapp-sales-agent

./: .gitignore  README.md  pyproject.toml  render.yaml  run.py
app/: config.py  main.py
app/agent/: core.py  prompts.py  router.py  tools.py
app/api/: health.py  momo_webhook.py  webhook.py
app/db/: migrations.py  models.py  seed.py  session.py
app/services/: momo.py  whatsapp.py
app/services/whatsapp/: __init__.py  base.py  meta.py  twilio.py
app/tools/: analytics.py  inventory.py  notifications.py  orders.py  payments.py
app/workers/: scheduler.py  tasks.py
